<resources>
    <!-- Application name -->
    <string name="app_name">WhatDrink</string>

    <!-- Activities -->
    <string name="title_activity_app">WhatDrink</string>

    <string name="action_settings">Settings</string>

    <!-- Navigation titles -->
    <string name="title_list">List</string>
    <string name="title_add">Add</string>
    <string name="title_settings">Settings</string>

    <!-- Navigation -->
    <string name="btn_next">Next</string>
    <string name="btn_previous">Previous</string>
    <string name="dot">&#8226;</string>

    <!-- Text fields -->
    <string name="txt_name">Name</string>
    <string name="txt_description">Description</string>
    <string name="txt_rating">Rating</string>
    <string name="txt_finish">Finish</string>
    <string name="txt_rating_desc">Rating can be given from <b>zero</b> to <b>five</b>\n as well as <i>.5</i> in between</string>
    <string name="txt_add_image">Add image</string>
    <string name="txt_change_image">Click to change</string>
    <string name="txt_image_desc">Drink image</string>

    <!-- App bar texts -->
    <string name="menu_search">Search</string>
    <string name="menu_delete">Delete</string>

    <!-- Login texts -->
    <string name="title_activity_login">Sign in</string>
    <string name="txt_sign_in_description">Please choose the way you would wish to sign in with.\nCurrently only way to sign in is via a Google Account</string>

    <!-- Adding and removing drinks -->
    <string name="drink_added">%s added</string>
    <string name="drink_removed">%s removed</string>

    <!-- Errors -->
    <string name="add_error">Please fill <b>all</b> fields</string>
    <string name="list_error">Could not fetch data</string>
    <string name="image_error">Could not fetch image</string>
    <string name="login_error">Could not login</string>
    <string name="nothing_here">Nothing here yet</string>
    <string name="no_internet">No network connection</string>

    <!-- Notifications -->
    <string name="channel_name">WhatDrinks sync notifications</string>
    <string name="channel_description">Notifies the user about unsynced entries when they are synced.</string>
    <string name="notification_synced_singular">%d new drink entry synced</string>
    <string name="notification_synced_plural">%d new drinks entries synced</string>
    <string name="notification_synced_text">One or more drinks have been synced since last online.</string>
</resources>
