<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_add_drink"
    tools:context="com.nozagleh.ormur.AddDrink">

    <!-- TODO: Update blank fragment layout -->

    <ViewFlipper
        android:id="@+id/flipper_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/txtName"
                android:layout_marginTop="80dp"
                android:text="@string/txt_name" />

            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtNameLabel"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:ems="10"
                android:hint="@string/txt_name"
                android:inputType="textPersonName|textFilter|textNoSuggestions" />

            <TextView
                android:id="@+id/txtDescLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtName"
                android:layout_alignStart="@+id/txtDesc"
                android:layout_marginTop="20dp"
                android:text="@string/txt_description" />

            <EditText
                android:id="@+id/txtDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDescLabel"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:minLines="2"
                android:lines="5"
                android:ems="10"
                android:inputType="textMultiLine|textFilter|textNoSuggestions"
                android:hint="@string/txt_description"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/seekBarText"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/seekBar"
                android:layout_marginBottom="10dp"
                android:text="@string/txt_rating"/>

            <RatingBar
                android:id="@+id/seekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.RatingBar"
                android:numStars="5"
                android:stepSize="0.5"
                android:layout_centerInParent="true"
                android:layout_marginEnd="80dp"
                android:layout_below="@id/seekBarText"/>

            <TextView
                android:id="@+id/txt_rating_desc"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekBar"
                android:layout_centerInParent="true"
                android:layout_marginBottom="10dp"
                android:text="@string/txt_rating_desc"/>

            <ImageView
                android:id="@+id/cameraImage"
                android:layout_below="@id/txt_rating_desc"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:minWidth="200dp"
                android:minHeight="200dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnAddImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@id/cameraImage"
                android:text="Add image"/>

        </RelativeLayout>
    </ViewFlipper>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="30dp"
        android:background="@android:color/transparent"
        android:text="@string/btn_next" />

    <Button
        android:id="@+id/btn_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="30dp"
        android:background="@android:color/transparent"
        android:text="@string/btn_previous" />

    <TextView
        android:id="@+id/dot1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@id/dot2"
        android:text="@string/dot"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:textSize="42dp"
        tools:text="&#8226;" />
    <TextView
        android:id="@+id/dot2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="13dp"
        android:layout_centerInParent="true"
        android:text="@string/dot"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:textSize="42dp"
        tools:text="&#8226;" />
    <TextView
        android:id="@+id/dot3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/dot2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="13dp"
        android:layout_marginStart="10dp"
        android:text="@string/dot"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:textSize="42dp"
        tools:text="&#8226;" />

</RelativeLayout>
